# SFT_RL_Circuits

./: .gitignore  README.md  projectml.yaml  pyproject.toml
.github/workflows/: ci.yml
requirements/: dev.txt  runtime.txt
scripts/py/run/: run_sft.py
scripts/py/test/: eval_gpt2_on_task.py  generate_samples.py
src/sft_rl_circuits/: README.md  __init__.py
src/sft_rl_circuits/config/: __init__.py  task_config.py  training_config.py
src/sft_rl_circuits/tasks/: README.md  __init__.py  dataset.py  formatting.py  generators.py  rules.py
src/sft_rl_circuits/training/: __init__.py  evaluation.py  sft_trainer.py  tokenization.py
tests/unit/: test_evaluation_backbone.py  test_sft_overfit.py  test_tasks.py  test_tokenization_masking.py
