[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sft-rl-circuits"
version = "0.1.0"
description = "SFT and RL circuit experiments and utilities"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jiahao Zhang" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/JiahaoZhang-Public/SFT_RL_Circuits.git"
Repository = "https://github.com/JiahaoZhang-Public/SFT_RL_Circuits.git"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
